<resources>
    <string name="app_name">iSAFE</string>
    <string name="assist">"India's First Integrated 24*7\nhelpline to trigger\nEmergency Care and Road Side\nAssistance"</string>
    <string name="morestars">"You need 100 more stars\nto get certified"</string>
    <string-array name="options1">
        <item>Volunteer</item>
        <item>Team Leader</item>
        <item>Team Member</item>
    </string-array>
    <string-array name="Times">

        <item>AM</item>
        <item>PM</item>

    </string-array>
    <string-array name="length">

        <item>m</item>
        <item>km</item>

    </string-array>
    <string-array name="domains">
        <item>Tech</item>
        <item>Medical</item>
        <item>Law</item>
        <item>Mass &amp; Media</item>
        <item>Awareness</item>
        <item>Creative</item>
        <item>Research</item>

    </string-array>
    <string name="request">Your Team Leader has requested for a meeting.\nAccept invite and join the meeting.</string>
    <string name="noble">Accident Reported!\nA noble work has been done!</string>
    <string name="save">Save &amp; Share</string>
    <string name="iSafe">The National Safer India Challenge comes with the\nvision to ignite the competitive spirit of the youth to\nachieve path breaking changes in the field of road \nsafety. We want to do this by enabling the youth\n and providing them a platform to do, what they like \nto do and in the process, create sustainable impact.\n\n\nThus, the Safer India Challenge\' 17 provides the \ncollege to choose the domain they have\nan expertise on, domain consisting of activities that\n require the specific skill they possess, so that we\n can create overall impact on the field of road safety\n across technology, law, health and awareness.\n\nThe colleges have been provided a large number\n of activities under their domains in various sub-\nsections from which they can chose on the activity\n they like and perform those over 8 months.\n\nNot only the domains have activities concerning\n the specific skill sets but they also come in with the\n benefits for these students in particular which\n would help them in their future pursuits.\n</string>
    <string name="invite">Click on start to invite team\nmembers for a meeting</string>
    <string name="collegename">Unique Identification Code\nfor "College Name" is</string>
    <string name="generator">Generate Unique Identification\nfor your College</string>
    <string name="opp_info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ante arcu, luctus nec turpis dignissim, finibus dapibus velit. Vivamus nec nulla maximus, molestie mauris ac, porta velit. Nulla vel nibh sed nulla pretium sollicitudin sit amet non dolor. Suspendisse potenti. Nulla dignissim dui ac leo commodo, tempor consequat risus commodo.</string>
    <string name="comp_info">For every plan to be successful, every aspect of the\nplan must be executed exceptionally. This\nnecessitates the importance of segregation. That is\nwhy isafe has come up iwth idea of domains.\nDomains ensure that every aspect concerned with\nroad safety has been covered and every person\nwho wants to help towards the cause irrespective of\ntheir field of work can work with the Indian Road\nSafety Campaign.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_comp">Comp</string>
    <string name="title_activity_agenda__meeting">Agenda_Meeting</string>
    <string name="addproject">Attach pdf and ppt or images if any about your project</string>
    <string name="check1">CHECKLIST 1 - STAGE 1 AUDIT (DURING FEASIBILITY STUDY)</string>
    <string name="q1"> What is the category of road for which the feasibility study has been carried out e.g.,
      expressway, national highway, state highway or other roads?
    </string>
    <string name="q2">Is the road intended to carry high-speed traffic or serve local access needs only?</string>
    <string name="q3">What kind of traffic is likely ranging from high speed mixed traffic or for more general
    use, including bicycles and significant pedestrian traffic?</string>
    <string name="q4">Do the chosen type of road and the standards, alignment and cross-section offer
    optimum road safety to all groups of road user including disabled in combination with
    the expected traffic density and speeds?</string>
    <string name="q5"> Will the proposed scheme be compatible with the standard of conjoining road
    sections?</string>
    <string name="q6"> Will there be sufficient opportunities for overtaking?</string>
    <string name="q7">Are the number and distribution of intersections appropriate in relation to:\n
    a) The desired function of the new road?\n
    b) Impact on the surrounding, adjacent and/or off-loaded road network (does the
    project simply move present problems?)?\n
    c) Accessibility for public transport and emergency vehicles?</string>
    <string name="q8"> Are the proposed horizontal and vertical alignments consistent with visibility
    requirements\n both along the road and junctions?</string>
    <string name="q9"> Has lighting been planned? If so, does the lighting offer maximum safety, both on links
    and at junctions?</string>
    <string name="q10">Will the project have any effect on existing pedestrian and cycle routes?</string>
    <string name="q11">Does the project include measures for vulnerable road-users and if so, do these
    measures offer maximum safety?\n Do the available accident data for the existing/adjacent road network give reason to
    expect particular road safety problems in the proposed project?</string>
    <string name="q12"> Whether non-motorised traffic is expected to cause problems?</string>
    <string name="q13">What is the likelihood of future widening?</string>
    <string name="q14"> Check any special events creating unusual or hazardous conditions and any other
    matter, which may have a bearing on safety.</string>
    <string name="check2">CHECKLIST 2 - STAGE 2 AUDIT (COMPLETION OF PRELIMINARY DESIGN)</string>
    <string name="q15">Is the desired speed compatible with the cross-section and other design elements
     and is the desired speed realistic?</string>
    <string name="q16">Is there adequate space for all groups of road users ?</string>
    <string name="q17">Is there appropriate separation between various groups of road users?</string>
    <string name="q18">Do the proposed alignment satisfy any demands on visibility at junctions and
    sight distances on free sections?</string>
    <string name="q19"> Will sight distances/visibility be blocked by traffic signs, guardrails, bridge
    parapets, buildings, rigid obstacles or plantations (now and in the future)</string>
    <string name="q20">Junctions, interchanges and their design:\n
    a) Will road users coming from all directions (including side roads) be able to see
    that they are approaching a conflict area? Are give-way lines, stop lines,
    turning lanes and ramps clearly visible?\n
    b) Are existing conjoining and intersecting roads appropriately adjusted and
    matched to the new road (without sharp bends and gradients)?\n
    c) Do the routes of road users through the junction seem clear for all directions
    and manoeuvres?\n
    d) Is there sufficient space for all types of vehicles to undertake all manoeuvres?\n
    e) Are the crossing facilities for pedestrians and non-motorised traffic adequate
    and safe?\n
    f) Can parking cause problems?\n
    g) Have roundabouts been considered?\n
    In urban areas, ghost markings and left-turning lanes with islands are safest; they
    prevent overtaking and assist pedestrians and cyclists who are crossing the road.
</string>
    <string name="q21">Decide whether or not old, unremoved section of road can give undesired optical
    directions.</string>
    <string name="q22">Special points at roundabouts:\n
    a)  Are all entrance lanes curved and is speed adequately reduced?\n
    b)  Will the central island be visible?\n
    c)  Are the measures taken for the benefit of pedestrians from a safe stopping
    distance and cycle traffic adequate?</string>
    <string name="q23"> Are existing junctions and intersections adjusted and matched to the new road
    appropriately (without sharp bends and gradients)?</string>
    <string name="q24">Are there any constructions that will be difficult to drain ?</string>
    <string name="q25">Will overtaking be prevented at critical places (not simply by restrictions, but also by
    making it quite apparent that overtaking is prohibited)?</string>
    <string name="q26">If signs and road markings have been proposed:\n
    a) Are the markings consistent and are they adequate?\n
    b) Has the quantity of information been kept at a reasonable level?</string>
    <string name="q27">If markings have not been proposed: will special markings be necessary?</string>
    <string name="q28">Is there any risk that cannot be "marked out of existence"?</string>
    <string name="q29"> Will there be any large sign constructions? Is so; will guardrails or breakaway safety
    devices protect them?</string>
    <string name="q30"> Has it been proposed that lighting be located on the outside or inside of bends?</string>
    <string name="q31">Will it be possible to carry out maintenance work (on lighting, gantries, plantations,
    etc.) safely and without using the carriageway or cycle path?</string>
    <string name="q32">Is the landscaping design or plantation likely to lead to a lowering of safety with mature
    or seasonal growth? Is frangible vegetation appropriate?</string>
    <string name="q33"> Are there arrangements for safe access by emergency vehicles? Check the design of
    medians and barriers, and the ability of emergency vehicles to stop without
    necessarily disrupting traffic?</string>
    <string name="check5">CHECKLIST 5 - ROAD MARKINGS</string>
    <string name="q67"> General adequacy and visibility of road markings, during day/night time and in
    wet/ dry weather conditions</string>
    <string name="q68"> Has correct type of markings been used in various situations (e.g. lane line, edge line)</string>
    <string name="q69">Are correct colours used for laying road markings?</string>
    <string name="q70">Is there any deficiency in the delineation of merge and diverge areas, including
    situations where \'through\' traffic may inadvertently lead into auxiliary and turn lanes?</string>
    <string name="q71">Are zebra crossing markings provided at junctions and mid-blocks of the sections
    (depending upon the movement of pedestrian)?</string>
    <string name="q72">Is positioning of stop lines appropriate?</string>
    <string name="q73"> Are the directional arrows marked on the pavement guiding the driver or creating
    confusion to the driver?</string>
    <string name="q74">Are there locations where there is a lack of \'Hazard markings\' at approach end of
    island, medians and culverts/ bridges etc.?</string>
    <string name="q75">Have retro-reflective markers been installed? Where coloured markers are used, have
    they been installed correctly?</string>
    <string name="q76">If chevron alignment markers are installed, have the correct types of markers been
    Used?</string>
</resources>